--- a/templates/menu.html
+++ b/templates/menu.html
@@ -20,7 +20,7 @@
             <td>
                 <a class="action" href="/{{e[1]}}/ctl">
                     &nbsp;{{e[0]}}&nbsp;{{e[2].upper()}}&nbsp;
-                </a>
+                </a><br class="small">
             </td>
             <td> ]</td>
         </tr>
