--- a/static/styles.css
+++ b/static/styles.css
@@ -5,8 +5,8 @@ html {
     font-family: 'Fira Code', 'Consolas', 'Menlo', 'Monaco', 'Courier New', monospace;
     background-color: rgb(0, 0, 0);
     color: rgb(210, 210, 210);
-    padding: 1em;
-    text-shadow: 0.05em 0.05em 0.05em black;
+    padding: 1rem;
+    text-shadow: 0.05rem 0.05rem 0.05rem black;
     user-select: none;
 }
 
@@ -26,8 +26,8 @@ fieldset {
 }
 
 textarea {
-    padding-top: 1em;
-    padding-bottom: 1em;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     width: 90%;
 }
 
@@ -45,7 +45,7 @@ textarea {
     z-index: 1;
     width: 100%;
     height: 100%;
-    margin-right: 6em;
+    margin-right: 6rem;
 }
 
 .tile {
@@ -57,9 +57,9 @@ textarea {
     border-radius: 100%;
 }
 
-.emoji {
+.remoji {
     opacity: 40%;
-    font-size: 1.5em;
+    font-size: 1.5rem;
 }
 
 .top {
@@ -68,39 +68,39 @@ textarea {
 }
 
 .page-content {
-    min-width: 40em;
+    min-width: 40rem;
 }
 
 .page-header {
     width: 100%;
     position: fixed;
-    top: 0em;
-    left: 0em;
+    top: 0rem;
+    left: 0rem;
     text-decoration: none;
     z-index: 1000;
     opacity: 90%;
 }
 
 #_header {
-    min-width: 31em;
+    min-width: 31rem;
 }
 
 #_body .section {
-    margin-top: 2em;
-    margin-bottom: 1em;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
 }
 
 .main {
-    margin-top: 4em;
+    margin-top: 4rem;
 }
 
 .menu {
-    line-height: 2em;
+    line-height: 2rem;
     z-index: 1000;
     position: fixed;
-    top: 2em;
-    left: 0em;
-    padding: 1em;
+    top: 2rem;
+    left: 0rem;
+    padding: 1rem;
 }
 
 .center {
@@ -109,40 +109,40 @@ textarea {
 }
 
 .indent-1 {
-    margin-left: 1em;
-    margin-right: 1em;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 .indent-2 {
-    margin-left: 2em;
-    margin-right: 2em;
+    margin-left: 2rem;
+    margin-right: 2rem;
 }
 
 .indent-3 {
-    margin-left: 2em;
-    margin-right: 2em;
+    margin-left: 2rem;
+    margin-right: 2rem;
 }
 
 .indent-4 {
-    margin-left: 4em;
-    margin-right: 4em;
+    margin-left: 4rem;
+    margin-right: 4rem;
 }
 
 .vspace-1 {
-    margin-bottom: 0.8em;
+    margin-bottom: 0.8rem;
 }
 
 .width-0 {
-    min-width: 80em;
+    min-width: 80rem;
 }
 
 .width-1 {
-    min-width: 37em;
+    min-width: 37rem;
 }
 
 .label {
-    padding-top: 0.8em;
-    margin-bottom: 0.5em;
+    padding-top: 0.8rem;
+    margin-bottom: 0.5rem;
 }
 
 .table-2 {
@@ -157,13 +157,13 @@ textarea {
 .table-3 {
     border-collapse: collapse;
     text-align: start;
-    min-height: 2em;
+    min-height: 2rem;
 }
 
 .table-3 td {
-    min-width: 3em;
+    min-width: 3rem;
     vertical-align: top;
-    min-height: 2em;
+    min-height: 2rem;
 }
 
 .right-aligned {
@@ -171,35 +171,35 @@ textarea {
 }
 
 .container-1 {
-    box-shadow: 0.2em 0.2em 0.2em 0.2em rgba(0, 0, 0, 0.8);
-    padding-left: 1em;
-    padding-right: 1em;
-    padding-top: 0.3em;
-    padding-bottom: 0.3em;
-    margin-bottom: 0.8em;
+    box-shadow: 0.2rem 0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.8);
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: 0.3rem;
+    padding-bottom: 0.3rem;
+    margin-bottom: 0.8rem;
 }
 
 .recess {
-    /*box-shadow: -0.1em -0.1em 0.1em 0.1em rgba(0, 0, 0, 0.8);*/
-    padding-left: 1em;
-    padding-right: 1em;
-    padding-bottom: 0.3em;
-    margin-right: 1em;
+    /*box-shadow: -0.1rem -0.1rem 0.1rem 0.1rem rgba(0, 0, 0, 0.8);*/
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-bottom: 0.3rem;
+    margin-right: 1rem;
 }
 
 .img-1 {
-    max-width: 10em;
-    max-height: 10em;
+    max-width: 10rem;
+    max-height: 10rem;
 }
 
 .img-2 {
-    max-width: 30em;
-    max-height: 30em;
+    max-width: 30rem;
+    max-height: 30rem;
 }
 
 .img-3 {
-    max-width: 70em;
-    max-height: 70em;
+    max-width: 70rem;
+    max-height: 70rem;
 }
 
 .img-4 {
@@ -212,7 +212,7 @@ textarea {
 }
 
 .flex form div {
-    margin-right: 1em;
+    margin-right: 1rem;
 }
 
 .selectable {
@@ -220,8 +220,8 @@ textarea {
 }
 
 .color-2 {
-    width: 8em;
-    height: 6em;
+    width: 8rem;
+    height: 6rem;
 }
 
 .back-1 {
@@ -234,83 +234,83 @@ textarea {
 
 .bottom-sticky {
     position: sticky;
-    padding: 1em;
-    bottom: 3em;
+    padding: 1rem;
+    bottom: 3rem;
 }
 
 .title-0 {
     color: white;
     text-shadow: 
-        0 0 0.5em rgba(0, 255, 255, 0.8),
-        0 0 1em rgba(0, 255, 255, 0.6),
-        0 0 1.5em rgba(0, 255, 255, 0.4),
-        0.05em 0.05em 0.05em black;
+        0 0 0.5rem rgba(0, 255, 255, 0.8),
+        0 0 1rem rgba(0, 255, 255, 0.6),
+        0 0 1.5rem rgba(0, 255, 255, 0.4),
+        0.05rem 0.05rem 0.05rem black;
     font-weight: bold;
-    font-size: 2em;
+    font-size: 2rem;
     animation: organic-vibrate 12s infinite alternate ease-in-out;
 }
 
 .title-0c {
     font-weight: bold;
-    font-size: 0.7em;
-    margin-left: -0.8em;
+    font-size: 0.7rem;
+    margin-left: -0.8rem;
     vertical-align: bottom;
     font-style: oblique;
-    letter-spacing: -0.15em;
+    letter-spacing: -0.15rem;
 }
 
 .glow-a {
     text-shadow: 
-    0em 0em 0.1em rgb(0, 255, 255, 0.7),
-    0.05em 0.05em 0.05em black;
+    0rem 0rem 0.1rem rgb(0, 255, 255, 0.7),
+    0.05rem 0.05rem 0.05rem black;
 }
 
 .glow-b {
     text-shadow: 
-    0em 0em 0.1em rgb(0, 255, 130),
-    0.05em 0.05em 0.05em black;
+    0rem 0rem 0.1rem rgb(0, 255, 130),
+    0.05rem 0.05rem 0.05rem black;
 }
 
 .glow-c {
     text-shadow: 
-    0em 0em 0.2em rgb(255, 255, 0),
-    0.05em 0.05em 0.05em black;
+    0rem 0rem 0.2rem rgb(255, 255, 0),
+    0.05rem 0.05rem 0.05rem black;
 }
 
 .glow-e {
     text-shadow: 
-    0em 0em 0.2em rgb(255, 0, 0),
-    0.05em 0.05em 0.05em black;
+    0rem 0rem 0.2rem rgb(255, 0, 0),
+    0.05rem 0.05rem 0.05rem black;
 }
 
 .section-body {
-    margin-top: 1em;
-    margin-bottom: 1em;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .title-1 {
-    margin-top: 1em;
-    margin-bottom: 1em;
-    font-size: 1.3em;
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
+    font-size: 1.3rem;
     color: rgb(250, 250, 250);
 }
 
 .title-2 {
-    font-size: 1.1em;
-    margin-bottom: 0.5em;
+    font-size: 1.1rem;
+    margin-bottom: 0.5rem;
     color: rgb(240, 240, 240);
 }
 
 .title-3 {
-    font-size: 1.0em;
+    font-size: 1.0rem;
     color: rgb(230, 230, 230);
 }
 
 input,a,a:visited,.action,textarea {
     text-decoration: none;
     color: rgb(230, 230, 230);
-    margin-bottom: 0.6em;
-    border: 0em;
+    margin-bottom: 0.6rem;
+    border: 0rem;
 }
 
 input,a,a:visited,.action {
@@ -334,12 +334,12 @@ select, button {
 
 .clear {
     text-shadow: none;
-    letter-spacing: 0.1em;
-    line-height: 1.5em;
+    letter-spacing: 0.1rem;
+    line-height: 1.5rem;
 }
 
 .invert-selection {
-    margin-top: 0.5em;
+    margin-top: 0.5rem;
 }
 
 .rotate {
@@ -352,8 +352,8 @@ select, button {
 }
 
 .slider {
-    width: 16em;
-    height: 1.6em;
+    width: 16rem;
+    height: 1.6rem;
 }
 
 .slider input {
@@ -361,7 +361,7 @@ select, button {
 }
 
 .light-grp {
-    width: 25em;
+    width: 25rem;
 }
 
 .hue {
@@ -395,22 +395,33 @@ select, button {
 }
 
 .md-back {
-    padding: 1em;
+    padding: 0.8rem;
 }
 
 .md-header {
-    line-height: 1.8em;
-    margin-top: 0.8em;
+    line-height: 1.8rem;
+    margin-top: 0.2rem;
+    border-bottom: 0.01rem dashed rgb(150, 200, 200);
 }
 
 .md-header-1 {
-    font-size: 1.3em;
-    font-weight: bolder;
+    font-size: 1.3rem;
+    margin-bottom: 1rem;
 }
 
 .md-header-2 {
-    font-size: 1.1em;
-    font-weight: bolder;
+    font-size: 1.2rem;
+}
+
+.md-header-3 {
+    font-size: 1.1rem;
+}
+
+.md-iframe {
+    width: 100%;
+    height: 100%;
+    min-height: 30rem;
+    border: none;
 }
 
 .small {
@@ -430,51 +441,44 @@ select, button {
 @keyframes organic-vibrate {
     0% {
         text-shadow: 
-            0 0 0.3em rgba(0, 255, 255, 0.4),
-            0 0 0.6em rgba(0, 255, 255, 0.3),
-            0 0 1em rgba(0, 255, 255, 0.2),
-            0.05em 0.05em 0.05em black;
+            -0.3rem 0 0.5rem rgba(0, 255, 255, 0.4),
+            -0.4rem 0 0.8rem rgba(0, 255, 255, 0.3),
+            -0.3rem 0 1.2rem rgba(0, 255, 255, 0.2),
+            0.05rem 0.05rem 0.05rem black;
     }
-    30% {
+    20% {
         text-shadow: 
-            0 0 0.5em rgba(0, 255, 255, 0.8),
-            0 0 1em rgba(0, 255, 255, 0.6),
-            0 0 1.5em rgba(0, 255, 255, 0.5),
-            0.05em 0.05em 0.05em black;
+            -0.2rem 0 0.7rem rgba(0, 255, 255, 0.6),
+            -0.3rem 0 1rem rgba(0, 255, 255, 0.5),
+            -0.4rem 0 1.4rem rgba(0, 255, 255, 0.4),
+            0.05rem 0.05rem 0.05rem black;
     }
-    50% {
+    40% {
         text-shadow: 
-            0 0 0.4em rgba(0, 255, 255, 0.7),
-            0 0 0.8em rgba(0, 255, 255, 0.5),
-            0 0 1.2em rgba(0, 255, 255, 0.4),
-            0.05em 0.05em 0.05em black;
+            0 0 0.9rem rgba(0, 255, 255, 0.8),
+            0 0 1.2rem rgba(0, 255, 255, 0.7),
+            0 0 1.6rem rgba(0, 255, 255, 0.5),
+            0.05rem 0.05rem 0.05rem black;
     }
-    70% {
+    60% {
         text-shadow: 
-            0 0 0.6em rgba(0, 255, 255, 0.9),
-            0 0 1.1em rgba(0, 255, 255, 0.7),
-            0 0 1.6em rgba(0, 255, 255, 0.5),
-            0.05em 0.05em 0.05em black;
+            0.2rem 0 0.7rem rgba(0, 255, 255, 0.8),
+            0.3rem 0 1.2rem rgba(0, 255, 255, 0.7),
+            0.4rem 0 1.5rem rgba(0, 255, 255, 0.6),
+            0.05rem 0.05rem 0.05rem black;
     }
-    75% {
+    80% {
         text-shadow: 
-            0 0 0.8em rgba(0, 255, 255, 0.9),
-            0 0 1.4em rgba(0, 255, 255, 0.9),
-            0 0 1.8em rgba(0, 255, 255, 0.9),
-            0.05em 0.05em 0.05em black;
-    }
-    100% {
-        text-shadow: 
-            0 0 0.5em rgba(0, 255, 255, 0.6),
-            0 0 1em rgba(0, 255, 255, 0.5),
-            0 0 1.3em rgba(0, 255, 255, 0.3),
-            0.05em 0.05em 0.05em black;
+            0.3rem 0 0.5rem rgba(0, 255, 255, 0.7),
+            0.4rem 0 0.8rem rgba(0, 255, 255, 0.5),
+            0.2rem 0 1.2rem rgba(0, 255, 255, 0.4),
+            0.05rem 0.05rem 0.05rem black;
     }
     100% {
         text-shadow: 
-            0 0 0.5em rgba(0, 255, 255, 0.8),
-            0 0 1em rgba(0, 255, 255, 0.6),
-            0 0 1.5em rgba(0, 255, 255, 0.4),
-            0.05em 0.05em 0.05em black;
+            0.2rem 0 0.4rem rgba(0, 255, 255, 0.6),
+            0.4rem 0 0.7rem rgba(0, 255, 255, 0.5),
+            0.3rem 0 1rem rgba(0, 255, 255, 0.3),
+            0.05rem 0.05rem 0.05rem black;
     }
 }
