--- a/templates/menu.html
+++ b/templates/menu.html
@@ -12,7 +12,7 @@
             ("💡", "lights",     "lights"),
             ("🌴", "ambients",   "ambients"),
             ("⏰", "alarms",     "alarms"),
-            ("📅", "calendar",   "calendar"),
+            ("🗓️", "calendar",   "calendar"),
             ("📡", "telemetry",  "telemetry")
             ] 
         %}
